# ubl

./: Cargo.toml  LICENSE  README.md  archive-secure.ubl  archive.ubl  secure.ubl
.github/workflows/: release.yml
dists/stable/main/binary-amd64/: Packages  ubl-x86_64-unknown-linux-gnu.deb
output/: more.txt
src/: archive.rs  cli.rs  compressor.rs  encrypt.rs  main.rs  utils.rs
src/commands/: compress.rs  extract.rs  list.rs  mod.rs  update.rs  verify.rs
