[package]
name = "ubl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
zstd = "0.12"
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
argon2 = "0.5"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"

[package.metadata.deb]
maintainer = "Lucif3r1101 rishav1101@gmail.com"
extended-description = "UBL CLI tool for secure compression and encryption"
depends = ""
assets = [
  ["target/x86_64-unknown-linux-gnu/release/ubl", "usr/bin/", "755"]
]

